# oh-my-open-clawcast

./: .gitignore  AI_WORKFLOW.md  LICENSE  PRD.md  README.md  pyproject.toml
Formula/: clawcast.rb
examples/: generate_demo.py  quota_live.sample.json  quota_manual.sample.json  rates.sample.json
notebooks/: forecast_demo.ipynb
oh_my_open_clawcast/: __init__.py  aggregator.py  cli.py  forecast.py  formatter.py  loader.py  quota.py  rates.py  report.py
openclaw_telemetry_forecast/: __init__.py  cli.py  forecast.py  report.py
scripts/: install.sh  send_slack_report.sh  send_telegram_report.sh
tests/: test_clawcast_message.py  test_forecast.py
