[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-telemetry-forecast"
version = "0.1.0"
description = "Telemetry + forecast analytics for OpenClaw cron/session logs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HoYALIM" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pyarrow>=14.0"
]

[project.scripts]
oc-forecast = "openclaw_telemetry_forecast.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
