[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-open-clawcast"
version = "0.1.0"
description = "Telemetry + forecast analytics for OpenClaw cron/session logs (Oh My Open Clawcast)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HoYALIM" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.scripts]
clawcast = "oh_my_open_clawcast.cli:main"
oc-forecast = "oh_my_open_clawcast.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
